Revert "Remove scrollbar border/padding - scrollbar now sits flush at bottom"
This reverts commit 8e70b8b943695215b1fffa8d464ee09b1f8e53c7.

--- a/src/index.css
+++ b/src/index.css
@@ -107,6 +107,7 @@ select:focus-visible {
 ::-webkit-scrollbar-thumb {
   background: var(--border-medium);
   border-radius: 5px;
+  border: 2px solid var(--bg-secondary);
 }
 
 ::-webkit-scrollbar-thumb:hover {
